--- a/notes/factivity/important-distinction.qmd
+++ b/notes/factivity/important-distinction.qmd
@@ -5,7 +5,7 @@ bibliography: ../../pds.bib
 
 There are two importantly distinct questions that we need to disentangle before moving on:
 
-1. Whether the gradience in @fig-veridicality-factivity suggests that there is no *class* (or subclasses) of factive predicates.
+1. Whether the gradience we observe suggests that there is no *class* (or subclasses) of factive predicates.
 2. Whether the veridicality inferences triggered by a particular expression containing a particular clause-embedding predicate are themselves gradient (whatever that would mean).
 
 We're going to be concerned with the latter question (i) because it is something PDS, we believe, is uniquely well positioned to ask, and thus asking it provides a useful demonstration of the PDS's use; and (ii) because the former question has already been answered.
@@ -20,7 +20,7 @@ To get a sense for how these clusters appear in the data, we can look back at @f
 
 ![One way of deriving a factivity measure from the MegaVeridicality dataset.](plots/derived_factivity_measure.png){#fig-derived-factivity width=750}
 
-Remember that the idea behind this figure is that we could in principle derive a continuous measure of factivity by taking the minimum along the axes of @fig-veridicality-factivity and rectifying.
+Remember that the idea behind this figure is that we could in principle derive a continuous measure of factivity by taking the minimum along the axes of the left plot in @fig-derived-factivity and rectifying.
 
 The thing to note is that (i) there are clearly at least two separate "bumps" in the histogram; but (ii) the peak of the right bump is not at 1, as we might have expected. This is because some of these subclasses–e.g. the cognitive factives, which @karttunen_observations_1971 observes to not always give rise factivity–appear to themselves be associated with non-necessary factive inferences, while other classes–e.g. the emotive factives, such as *love*, *hate*, and *be annoyed*–always do (up to measurement error and other sources of noise). 
 
